fixed matrix buttons on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -958,8 +958,25 @@ button#clear-map:hover {
   }
 
   #ODtitle{
-    display: none;
+    flex-direction: column;
+    position: fixed;
+    right: 0;
+    margin-top: 3em;
+    align-items: end;
   }
+
+  #ODtitle div{
+    padding: 0;
+  }
+
+  #downloadOD{
+    padding-top: 0.75em;
+    padding-right: 0.5em;
+  }
+
+ #ODtitle span{
+   display: none;
+ }
 
   #hideMatrizLabel{
     display: none;
